fix navbar backgroun color issue on mobile screens

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,6 +20,14 @@ nav {
   background-size: cover;
 }
 
+.map iframe {
+  left: 0;
+  top: 0;
+  height: 400px;
+  width: 100%;
+  border: none;
+}
+
 @media (max-width: 1000px) {
   .hero .image-container {
     display: flex;
